--- a/styles/style.css
+++ b/styles/style.css
@@ -10,3 +10,25 @@
     font-weight: 400;
 }
 
+:root{
+    --pale-blue: hsl(243, 100%, 93%);
+    --grayish-blue: hsl(229, 7%, 55%);
+    --Dark-blue: hsl(228, 56%, 26%);
+    --VeryDark-Blue: hsl(229, 57%, 11%);
+}
+
+body{
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+body{
+    background-color: var(--VeryDark-Blue);
+    background-image: url('../images/bg-desktop.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: contain;
+    background-position: bottom right;
+}
