--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@
     --VeryDark-Blue: hsl(229, 57%, 11%);
 }
 
-body{
+body, html{
     width: 100%;
     height: 100%;
     padding: 0;
@@ -32,3 +32,12 @@ body{
     background-size: contain;
     background-position: bottom right;
 }
+
+.container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
