--- a/styles/style.css
+++ b/styles/style.css
@@ -36,8 +36,11 @@ body{
 }
 
 .fylo-storage{
+    width: 63.82%;
+
     display: flex;
     align-items: flex-end;
+    justify-content: center;
 }
 
 /* panel */
@@ -77,11 +80,13 @@ body{
 
 /* storage */
 .storage{
-    width: 540px;
+    max-width: 540px;
+    min-width: 480px; 
     height: 154px;
     padding: 42px 40px;
     border-radius: 10px;
 
+    
     position: relative;
 
     background-color: var(--Dark-blue);
