--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
     --pale-blue: hsl(243, 100%, 93%);
     --grayish-blue: hsl(229, 7%, 55%);
     --Dark-blue: hsl(228, 56%, 26%);
+    --darker-blue: hsl(230, 52%, 18%);
     --VeryDark-Blue: hsl(229, 57%, 11%);
     --white: #ffffff;
     --black: #000000;
@@ -27,30 +28,66 @@ body{
     background-position: bottom right;
 }
 
+@media screen and (max-width:920px){
+    body{
+        background-image: url('../images/bg-mobile.png');
+        background-size: cover;
+    }
+}
+
+
 .container{
     width: 100%;
     height: 100%;
+
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .fylo-storage{
-    width: 63.82%;
+    width: 63.89%;
+    max-width: 920px;
+    min-width: 900px;
 
     display: flex;
     align-items: flex-end;
     justify-content: center;
 }
 
+@media screen and (max-width:920px){
+    .fylo-storage{
+        width: 630px;
+        min-width: unset;
+
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+@media screen and (max-width: 767px){
+    .fylo-storage{
+        width: 350px;
+    }
+}
+
 /* panel */
+
 .panel{
-    width: 350px;
+    width: 350px; 
     height: 200px;
     margin-right: 30px;
     padding: 40px;
     border-radius: 10px 90px 10px 10px;
+    
+
     background-color: var(--Dark-blue);
+}
+
+@media screen and (max-width:920px){
+    .panel{
+        margin-bottom: 10px;
+    }
 }
 
 .panel .logo{
@@ -80,16 +117,22 @@ body{
 
 /* storage */
 .storage{
-    max-width: 540px;
-    min-width: 480px; 
+    width: 58.7%;
     height: 154px;
     padding: 42px 40px;
     border-radius: 10px;
 
-    
     position: relative;
 
+    flex: 1 1 58.7%;
+
     background-color: var(--Dark-blue);
+}
+
+@media screen and (max-width:920px){
+    .storage{
+        width: 100%;
+    }
 }
 
 .storage p{
@@ -113,7 +156,7 @@ body{
     padding: 3px;
     margin-bottom: 10px;
 
-    background-color: var(--VeryDark-Blue);
+    background-color: var(--darker-blue);
 }
 
 .storage-bar .used-storage{
@@ -151,6 +194,14 @@ body{
     right: 40px;
 }
 
+@media screen and (max-width:767px){
+    .storage .left-memory{
+        bottom: unset;
+        right: unset;
+        left: 74px;
+    }
+}
+
 .storage .left-memory .globe{
     width: 179px;
     height: 72px;
@@ -165,6 +216,13 @@ body{
     background-color: white;
 }
 
+@media screen and (max-width:767px){
+    .storage .left-memory .globe{
+        border-radius: 10px;
+    }
+}
+
+
 .storage .left-memory .globe::after{
     width: 0;
     height: 0;
@@ -177,6 +235,12 @@ body{
 
     content: '';    
 }
+
+@media screen and (max-width:767px){
+    .storage .left-memory .globe::after{
+        display: none;
+    }
+} 
 
 .storage .left-memory .globe h2{
     font-family: 'raleway', sans-serif;
